# RewrdHunter-GraphCrossingEdge

./: .gitignore  00instruction.txt  main.py  pyproject.toml  sh00_data_preprocessing.sh
data/: test_graph.txt  train_graph.txt
scripts/: 00_analyze_dataset.py  10_test_baseline.py  11_merge_baselines.py  21_visualize_baselines.py  22_evaluate_relative.py  23_visualize_layouts.py  30_run_training.py
src/: __init__.py  evaluate.py  evaluate_rome.py  main.py  plot.py  train.py
src/data/: __init__.py  preprocessing.py  rome.py
src/enviroment/: __init__.py  graph_layout_env.py
src/envs/: __init__.py  discrete.py
src/losses/: rank_matching.py  softmax_ranking.py  stress.py  xing.py
src/models/: __init__.py  gnn.py  gnn_policy.py  mlp_policy.py
src/tasks/: base.py  discrete_ppo.py
