[project]
name = "reward-hunter"
version = "0.1.0"
description = "Graph Layout Optimization using RL"
authors = [
    {name = "ShqiW",email = "shqiw@gmail.com"}
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "networkx (>=3.6.1,<4.0.0)",
    "tqdm (>=4.67.2,<5.0.0)",
    "torch (>=2.10.0,<3.0.0)",
    "pygraphviz (>=1.14,<2.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "gymnasium (>=1.2.3,<2.0.0)",
    "torch-geometric (>=2.7.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
